# OCR-API

./: .gitignore  README.md  objective.txt  pyproject.toml
app/: main.py
engines/: easyocr.py  paddle.py  tesseract.py  utils.py
results/easyocr/: 82092117_easyocr.txt  82200067_0069_easyocr.txt  82250337_0338_easyocr.txt  82251504_easyocr.txt  82252956_2958_easyocr.txt  82253058_3059_easyocr.txt  82253245_3247_easyocr.txt  82253362_3364_easyocr.txt  82254765_easyocr.txt  82491256_easyocr.txt  82504862_easyocr.txt  82562350_easyocr.txt  82573104_easyocr.txt  82837252_easyocr.txt  83443897_easyocr.txt  83553333_3334_easyocr.txt  83573282_easyocr.txt  83594639_easyocr.txt  83624198_easyocr.txt  83635935_easyocr.txt  83641919_1921_easyocr.txt  83772145_easyocr.txt  83823750_easyocr.txt  83996357_easyocr.txt  85201976_easyocr.txt  85240939_easyocr.txt  85540866_easyocr.txt  85629964_easyocr.txt  86075409_5410_easyocr.txt  86079776_9777_easyocr.txt  86220490_easyocr.txt  86230203_0206_easyocr.txt  86236474_6476_easyocr.txt  86244113_easyocr.txt  86263525_easyocr.txt  86328049_8050_easyocr.txt  87086073_easyocr.txt  87093315_87093318_easyocr.txt  87125460_easyocr.txt  87137840_easyocr.txt  (+20 more)
results/paddle/: 82092117_paddle.txt  82200067_0069_paddle.txt  82250337_0338_paddle.txt  82251504_paddle.txt  82252956_2958_paddle.txt  82253058_3059_paddle.txt  82253245_3247_paddle.txt  82253362_3364_paddle.txt  82254765_paddle.txt  82491256_paddle.txt  82504862_paddle.txt  82562350_paddle.txt  82573104_paddle.txt  (+47 more)
scripts/: benchmark_funsd.py  benchmark_ocr.py
tests/: test_upload.py
(+60 files in other folders)
